// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when creating 1`] = `
<React.Fragment>
  <Form
    onSubmit={[Function]}
  >
    <FormSectionHeader>
      Talents
    </FormSectionHeader>
    <withState(EntitySelectorSearch)
      entityType="talent"
      onAutocompleteSearch={[Function]}
      onAutocompleteSelect={[Function]}
    />
    <FormRow>
      <Field
        component={[Function]}
        containerStyle={
          Object {
            "paddingTop": 0,
          }
        }
        label=""
        name="talents"
      />
    </FormRow>
    <Button
      aria-label="Create a new Talent"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Create a new Talent…
    </Button>
    <Divider
      className="src-modules-event-forms-talents__last-divider"
      type="basic"
    />
    <FormError />
    <FormButtons
      onCancel={null}
      onPrevious={[Function]}
      submitLabel="Next"
      submitting={false}
    />
  </Form>
  <Modal
    aria-label="Datepicker"
    backdropTransition={[Function]}
    onHide={[Function]}
    show={false}
    transition={[Function]}
  >
    <ModalContainer
      dismissable={true}
      onHide={[Function]}
      title="Create New Talent"
      type="wide"
    >
      <Connect(ReduxForm)
        className="src-modules-event-forms-talents__modal-form"
        initialValues={
          Object {
            "commonRole": "",
            "firstNames": "",
            "images": Array [],
            "lastName": "",
            "links": Array [],
            "status": "Active",
            "talentType": "Individual",
            "version": 0,
            "weSay": "",
          }
        }
        onCancel={[Function]}
        onSubmit={[Function]}
      />
    </ModalContainer>
  </Modal>
</React.Fragment>
`;

exports[`should render correctly when editing 1`] = `
<React.Fragment>
  <Form
    onSubmit={[Function]}
  >
    <FormSectionHeader>
      Talents
    </FormSectionHeader>
    <withState(EntitySelectorSearch)
      entityType="talent"
      onAutocompleteSearch={[Function]}
      onAutocompleteSelect={[Function]}
    />
    <FormRow>
      <Field
        component={[Function]}
        containerStyle={
          Object {
            "paddingTop": 0,
          }
        }
        label=""
        name="talents"
      />
    </FormRow>
    <Button
      aria-label="Create a new Talent"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Create a new Talent…
    </Button>
    <Divider
      className="src-modules-event-forms-talents__last-divider"
      type="basic"
    />
    <FormError />
    <FormButtons
      onCancel={[Function]}
      onPrevious={[Function]}
      submitLabel="Next"
      submitting={false}
    />
  </Form>
  <Modal
    aria-label="Datepicker"
    backdropTransition={[Function]}
    onHide={[Function]}
    show={false}
    transition={[Function]}
  >
    <ModalContainer
      dismissable={true}
      onHide={[Function]}
      title="Create New Talent"
      type="wide"
    >
      <Connect(ReduxForm)
        className="src-modules-event-forms-talents__modal-form"
        initialValues={
          Object {
            "commonRole": "",
            "firstNames": "",
            "images": Array [],
            "lastName": "",
            "links": Array [],
            "status": "Active",
            "talentType": "Individual",
            "version": 0,
            "weSay": "",
          }
        }
        onCancel={[Function]}
        onSubmit={[Function]}
      />
    </ModalContainer>
  </Modal>
</React.Fragment>
`;
